--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,14 @@ data/
 
 # Exceptions (Config files and package info we DO want to keep)
 !config/normalization_rules.csv
+!config/source_mapping.csv
 !package.json
 !package-lock.json
 !normalization_rules.csv
+!*_index.csv
+!Entity_input.csv
+!data/star_schema/
+!NewStockData/data/
 
 # System
 .DS_Store
